Can init a CGL context but got issue using it (can't destroy it neither make it current)